--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,41 @@
 # Archivos y carpetas de macOS
 .DS_Store
 .Trash/
+
 # Archivos del entorno virtual
 venv/
-# Archivos de configuración de usuario
+__pycache__/
+*.pyc
+*.pyo
+
+# Archivos de configuración de entorno y claves
+.env
+*.env
+
+# Archivos de usuario y configuración temporal
 *.save
 *.history
-# Otros directorios innecesarios
+*.log
+
+# Directorios específicos de tu sistema que no son parte del proyecto
 Library/
 Downloads/
 Movies/
 Music/
 Pictures/
 Public/
+
+# Archivos y carpetas relacionados con pruebas
+*.pytest_cache/
+.cache/
+
+# Archivos de herramientas y dependencias
+node_modules/  # Si hay uso de JavaScript en el proyecto
+.idea/         # Archivos de JetBrains (PyCharm, IntelliJ)
+.vscode/       # Configuración de VS Code
+
+# Archivos de construcción y empaquetado
+build/
+dist/
+*.egg-info/
+
